--- a/src/app/inuserbio/bio-edit/bio-edit.component.html
+++ b/src/app/inuserbio/bio-edit/bio-edit.component.html
@@ -74,7 +74,7 @@
           <div class="form-group">
             <label for="photo" style="color: white;">Photo URL</label>
             <input
-              type="text"
+              type="url"
               id="photo"
               formControlName="photo"
               class="form-control"
@@ -86,12 +86,12 @@
           </div>
         </div>
       </div>
-      <div class="row">
-        <div class="col-xs-12">
-          <img [src]="imagePath.value" class="img-responsive" id="circle"
-               style="align-items: center; margin-left: 10%; margin-right: 5%;">
-        </div>
-      </div>
+<!--      <div class="row">-->
+<!--        <div class="col-xs-12">-->
+<!--          <img [src]="imagePath.value" class="img-responsive" id="circle"-->
+<!--               style="align-items: center; margin-left: 10%; margin-right: 5%;">-->
+<!--        </div>-->
+<!--      </div>-->
       <br>
       <div class="row">
         <div class="col-xs-12 text-center">
